Modified how userlists are managed
